# metalocal

./: .gitignore  CMakeLists.txt  Config.mak  README.md  dllapi.cpp  engine_hook.cpp  engine_hook.hpp  lang.cpp  lang.hpp  meta_api.cpp  metalocal.sln  metalocal.vcxproj  metalocal.vcxproj.filters  signatures.hpp
.github/workflows/: build.yml  release.yml
src/header/: lang.hpp
src/source/: lang.cpp  meta_api.cpp
svencoop/locale/: cn.ini
